--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,6 +20,10 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v5.2.0
 
+      - name: Override DNS
+        run: |
+          echo "nameserver 1.1.1.1" | sudo tee /etc/resolv.conf > /dev/null
+
       - name: Build
         run: go build -tags with_utls,with_grpc -o megalodon ./main.go
 
