--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Run
         run: ./megalodon
 
-      - name: Save results
+      - name: Save results alternatively
+        if: failure()
         run: |
           curl --header "Content-Type: application/json" -d "{\"query\": \"$(cat query.txt | tr -d \\n\\t)\"}" https://api.foolvpn.me/db/${{ secrets.API_TOKEN }}/exec
