--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,3 +25,12 @@ jobs:
 
       - name: Run
         run: ./megalodon
+
+      - name: commit blacklist
+        if: ${{ always() }}
+        run: |
+          git config --global user.name "Github Actions"
+          git config --global user.email "actions@github.com"
+          git add blacklist.txt
+          git commit -m "update blacklist"
+          git push origin main
